refill page with cookies

--- a/templates/cookies.html
+++ b/templates/cookies.html
@@ -3,6 +3,80 @@
 {% block content %}
 <h1 class="h1-titles mb-3">INFORMACJA O COOKIES</h1>
 
+<div class="container">
+    <div class="row">
+        <div class="col-sm-12">
+            <h5 class="h5-titles">Od 28 maja 2018 obowiązuje Rozporządzenie Parlamentu Europejskiego i Rady (UE)
+                2016/679 z dnia 27 kwietnia 2016 r (RODO). Niezbędna jest Twoja zgoda na przetwarzanie Twoich danych
+                osobowych przechowywanych w plikach cookies. Poniżej znajduje się pełny zakres informacji na ten
+                temat.</h5>
+
+            <blockquote class="quote-card">
+                <p>
+                    Wyrażam zgodę na przechowywanie na urządzeniu, z którego korzystam tzw. plików cookies oraz na
+                    przetwarzanie moich danych osobowych pozostawianych w czasie korzystania przeze mnie ze stron
+                    internetowych lub serwisów oraz innych parametrów zapisywanych w plikach cookies w celach
+                    marketingowych, w tym na profilowanie i w celach analitycznych przez DiPHONE Dawid Orzepowski.
+                </p>
+                <cite>
+                    Ja, Użytkownik
+                </cite>
+            </blockquote>
+
+            <p class="p-politics-title">ADMINISTRATOREM DANYCH JEST <strong>DiPHONE Dawid Orzepowski </strong>Z SIEDZIBĄ
+                PRZY UL. HETMAŃSKIEJ 59 W LEGIONOWIE.</p>
+
+            <!-- CELE PRZETWARZANIA DANYCH -->
+            <p class="p-politics">
+                <img src="static/images/service/check.png" style="height: 20px"><strong> CELE PRZETWARZANIA
+                DANYCH </strong>
+                <br>
+                <span>●</span> cele analityczne;
+                <br>
+                <span>●</span> świadczenie usług drogą elektroniczną;
+                <br>
+                <span>●</span> dopasowanie treści stron internetowych do preferencji i zainteresowań;
+                <br>
+                <span>●</span> wykrywanie botów i nadużyć w usługach;
+                <br>
+                <span>●</span> pomiary statystyczne i udoskonalenie usług;
+            </p>
+
+            <!-- PODSTAWY PRAWNE PRZETWARZANIA DANYCH -->
+            <p class="p-politics">
+                <img src="static/images/service/check.png" style="height: 20px"><strong> PODSTAWY PRAWNE PRZETWARZANIA
+                DANYCH </strong>
+                <br>
+                <span>●</span> cele Analityczne – zgoda;
+                <br>
+                <span>●</span> świadczenie usług drogą elektroniczną – niezbędność danych do świadczenia usługi;
+                <br>
+                <span>●</span> pozostałe cele – uzasadniony interes administratora danych;
+            </p>
+
+            <!-- ODBIORCY DANYCH -->
+            <p class="p-politics">
+                <img src="static/images/service/check.png" style="height: 20px"><strong> ODBIORCY DANYCH </strong>
+                <br>
+                <span>●</span> W związku z realizacją usług dane osobowe będą ujawniane zewnętrznym podmiotom, w tym w
+                szczególności dostawcom odpowiedzialnym za obsługę systemów informatycznych, podmiotom takim jak banki i
+                operatorzy płatności, podmioty świadczące usługi księgowe, kurierzy (w związku z realizacją zamówienia),
+                agencje marketingowe (w zakresie usług marketingowych) oraz podmiotom powiązanym z Administratorem
+            </p>
+
+            <!-- PRAWA UŻYTKOWNIKA -->
+            <p class="p-politics">
+                <img src="static/images/service/check.png" style="height: 20px"><strong> PRAWA UŻYTKOWNIKA </strong>
+                <br>
+                <span>●</span> Prawo żądania sprostowania, usunięcia lub ograniczenia przetwarzania danych; prawo
+                wycofania zgody na przetwarzanie danych osobowych. Inne prawa osoby, której dane dotyczą oraz
+                szczegółowe informacje o zasadach przetwarzania danych znajdziesz w “Polityce prywatności” –
+                klikając <a href="/polityka_prywatnosci">tutaj</a>.
+            </p>
+
+        </div>
+    </div>
+</div>
 
 
 <!-- FOOTER -->
