--- a/templates/cookies.html
+++ b/templates/cookies.html
@@ -71,7 +71,7 @@
                 <span>●</span> Prawo żądania sprostowania, usunięcia lub ograniczenia przetwarzania danych; prawo
                 wycofania zgody na przetwarzanie danych osobowych. Inne prawa osoby, której dane dotyczą oraz
                 szczegółowe informacje o zasadach przetwarzania danych znajdziesz w “Polityce prywatności” –
-                klikając <a href="/polityka_prywatnosci">tutaj</a>.
+                klikając <strong><a href="/polityka_prywatnosci" style="color: black">tutaj</a></strong>.
             </p>
 
         </div>
