--- a/templates/dla_firm.html
+++ b/templates/dla_firm.html
@@ -5,7 +5,7 @@
 <div class="container">
     <div class="row">
         <div class="col-sm-4">
-            <div class="animate__animated animate__backInLeft" style="animation-delay: 1s">
+            <div class="animate__animated animate__backInLeft">
                 <br>
                 <img class="img-fluid" src="/static/images/for_company/fixed.png">
             </div>
@@ -21,7 +21,7 @@
         </div>
 
         <div class="col-sm-4">
-            <div class="animate__animated animate__backInRight" style="animation-delay: 1s">
+            <div class="animate__animated animate__backInRight">
                 <br>
                 <img class="img-fluid" src="/static/images/for_company/fixed2.png">
             </div>
