--- a/templates/glowna.html
+++ b/templates/glowna.html
@@ -1,11 +1,29 @@
 {% extends "pl_layout.html" %}
 
+
 {% block content %}
 
-<!--<div class="text-center" style="padding-top: 50px">-->
-<!--    <h1 class="h1-titles mb-3">PROFESJONALNY SERWIS URZĄDZEŃ MOBILNYCH</h1>-->
-<!--    <img class="img-fluid animate__animated animate__backInUp" src="/static/images/main_page/phones.png">-->
-<!--</div>-->
+<!-- COOKIES -->
+<div class="StickyMenu">
+    <div class="alert alert-dark alert-dismissible fade show border border-0">
+        <button type="button" class="close" data-dismiss="alert" style="opacity: 0.8">&times;</button>
+        <h6 class="h6-titles" style="text-align: center">Ta strona używa plików cookie w celu usprawnienia i
+            ułatwienia dostępu do serwisu oraz prowadzenia danych statystycznych. Dalsze korzystanie z tej witryny
+            oznacza akceptację tego stanu rzeczy.</h6>
+        <div class="container">
+            <div class="row" style="text-align: center">
+                <div class="col">
+                    <small>
+                        <a href="/polityka_prywatnosci" style="color: black" class="a-links">POLITYKA PRYWATNOŚCI</a>
+                        <a href="/cookies" style="color: black" class="a-links">COOKIES</a>
+                        <a href="/regulamin" style="color: black" class="a-links">REGULAMIN</a>
+                    </small>
+                </div>
+            </div>
+
+        </div>
+    </div>
+</div>
 
 <!-- CAROUSEL -->
 <h1 class="h1-titles mb-3">PROFESJONALNY SERWIS URZĄDZEŃ MOBILNYCH</h1>
@@ -82,4 +100,13 @@
 </div>
 <br>
 
+<!--&lt;!&ndash; COOKIES &ndash;&gt;-->
+<!--<div class="alert alert-dark alert-dismissible fade show">-->
+<!--    <button type="button" class="close" data-dismiss="alert">&times;</button>-->
+<!--    <h5 class="h5-titles-shadow" style="text-align: center">Ta strona używa plików cookie w celu usprawnienia i ułatwienia dostępu do serwisu oraz-->
+<!--        prowadzenia danych statystycznych. Dalsze korzystanie z tej witryny oznacza akceptację tego stanu rzeczy.</h5>-->
+<!--</div>-->
+
+
 {% endblock %}
+
