--- a/templates/glowna.html
+++ b/templates/glowna.html
@@ -3,27 +3,7 @@
 
 {% block content %}
 
-<!-- COOKIES -->
-<div class="StickyMenu">
-    <div class="alert alert-dark alert-dismissible fade show border border-0">
-        <button type="button" class="close" data-dismiss="alert" style="opacity: 0.8">&times;</button>
-        <h6 class="h6-titles" style="text-align: center">Ta strona używa plików cookie w celu usprawnienia i
-            ułatwienia dostępu do serwisu oraz prowadzenia danych statystycznych. Dalsze korzystanie z tej witryny
-            oznacza akceptację tego stanu rzeczy.</h6>
-        <div class="container">
-            <div class="row" style="text-align: center">
-                <div class="col">
-                    <small>
-                        <a href="/polityka_prywatnosci" style="color: black" class="a-links">POLITYKA PRYWATNOŚCI</a>
-                        <a href="/cookies" style="color: black" class="a-links">COOKIES</a>
-                        <a href="/regulamin" style="color: black" class="a-links">REGULAMIN</a>
-                    </small>
-                </div>
-            </div>
 
-        </div>
-    </div>
-</div>
 
 <!-- CAROUSEL -->
 <h1 class="h1-titles mb-3">PROFESJONALNY SERWIS URZĄDZEŃ MOBILNYCH</h1>
@@ -107,6 +87,26 @@
 <!--        prowadzenia danych statystycznych. Dalsze korzystanie z tej witryny oznacza akceptację tego stanu rzeczy.</h5>-->
 <!--</div>-->
 
+<!-- COOKIES -->
+<div class="StickyMenu">
+    <div class="alert alert-dark alert-dismissible fade show border border-0">
+        <button type="button" class="close" data-dismiss="alert">&times;</button>
+        <h6 class="h6-titles" style="text-align: center">Ta strona używa plików cookie w celu usprawnienia i
+            ułatwienia dostępu do serwisu oraz prowadzenia danych statystycznych. Dalsze korzystanie z tej witryny
+            oznacza akceptację tego stanu rzeczy.</h6>
+        <div class="container">
+            <div class="row" style="text-align: center">
+                <div class="col">
+                    <small>
+                        <a href="/polityka_prywatnosci" style="color: black" class="a-links">POLITYKA PRYWATNOŚCI</a>
+                        <a href="/cookies" style="color: black" class="a-links">COOKIES</a>
+                        <a href="/regulamin" style="color: black" class="a-links">REGULAMIN</a>
+                    </small>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 
 {% endblock %}
 
