refill page with statute

--- a/templates/regulamin.html
+++ b/templates/regulamin.html
@@ -1,8 +1,60 @@
 {% extends "pl_layout.html" %}
 
 {% block content %}
-<h1 class="h1-titles mb-3">REGULAMIN SERWISU</h1>
+<h1 class="h1-titles mb-3">REGULAMIN</h1>
 
+<div class="container">
+    <div class="row">
+        <div class="col-sm-12">
+            <h4 class="h5-titles">ŚWIADCZENIA USŁUG NAPRAWCZYCH <span
+                    class="h5-titles-shadow">DiPHONE Dawid Orzepowski</span>
+            </h4>
+
+            <!-- POSTANOWIENIA OGÓLNE -->
+            <p class="p-politics-title"><strong>§1 POSTANOWIENIA OGÓLNE:</strong></p>
+            <p class="p-politics">
+                <img src="static/images/service/check.png" style="height: 20px"> Firma DiPHONE Dawid Orzepowski z
+                siedzibą przy ul. Hetmańskiej 59, kod pocztowy 05-120 Legionowa, posługująca się numerem NIP 5361852916
+                oraz REGON 380576174, zwana dalej <strong>DiPHONE</strong> świadczy usługi naprawy urządzeń typu
+                smartphone, tablet i laptop producentów, których pełna i aktualna lista znajduje się na stronie
+                internetowej www.diphone.pl, zwane dalej „Usługami”.</p>
+            <p class="p-politics">
+                <img src="static/images/service/check.png" style="height: 20px"> Zleceniodawcami DiPHONE mogą być
+                zarówno Przedsiębiorcy jak i Konsumenci, tj. osoby fizyczne, które dokonują czynności prawnej,
+                niezwiązanej bezpośrednio z jej działalnością gospodarczą lub zawodową. Przedsiębiorcą w rozumieniu
+                niniejszego regulaminu jest osoba fizyczna, osoba prawna lub jednostka organizacyjna nie będąca osobą
+                prawną, której ustawa przyznaje zdolność prawną, prowadząca we własnym imieniu działalność gospodarczą
+                lub zawodową.</p>
+            <p class="p-politics">
+                <img src="static/images/service/check.png" style="height: 20px"> Zleceniodawca poprzez zlecenie
+                wykonania
+                Usługi akceptuje postanowienia niniejszego regulaminu i wyraża zgodę na przetwarzanie danych osobowych w
+                zakresie niezbędnym do realizacji Usługi.</p>
+
+            <!-- WYCENA USŁUGI -->
+            <p class="p-politics-title"><strong>§2 WYCENA USŁUGI:</strong></p>
+            <p class="p-politics">
+                <img src="static/images/service/check.png" style="height: 20px"> Ceny za Usługi w zależności od
+                wybranego producenta, modelu i rodzaju usterki zostały określone zostały na stronie ww.diphone.pl.
+            </p>
+            <p class="p-politics">
+                <img src="static/images/service/check.png" style="height: 20px"> W przypadku wskazania jednej określonej
+                ceny za naprawę zgodną z parametrami wskazanymi przez Zleceniodawcę, DiPHONE gwarantuje jej wykonanie w
+                tejże kwocie.</p>
+            <p class="p-politics">
+                <img src="static/images/service/check.png" style="height: 20px"> W przypadku wskazania zakresu cenowego
+                „od – do” za naprawę zgodną z parametrami wskazanymi przez Zleceniodawcę, DiPHONE gwarantuje, że cena
+                maksymalna za naprawę nie zostanie przekroczona, a ostateczna cena może być od niej niższa w zależności
+                od tego, czy dane uszkodzenie było spowodowane jednym lub więcej czynnikami, co może zostać określone
+                dopiero po analizie podzespołów elektronicznych na miejscu w serwisie DiPHONE. W przypadku gdy cena
+                naprawy, określona po weryfikacji na miejscu w serwisie, jest wyższa niż wskazana kwota minimalna
+                wskazana na stronie www.diphone.pl, obsługa klienta DiPHONE skontaktuje się ze Zleceniodawcą, aby
+                uzyskać jego akceptację co do kwoty naprawy.</p>
+
+
+        </div>
+    </div>
+</div>
 
 
 <!-- FOOTER -->
