--- a/templates/sprzedaz.html
+++ b/templates/sprzedaz.html
@@ -13,7 +13,7 @@
                 może po prostu potrzebujesz zmiany? W naszej ofercie znajdują się zarówno nowe, jak i używane telefony.
             </p>
             <h5><a class="btn btn-outline-dark btn-lg animate__heartBeat p-par" style="animation-delay: 2s"
-                       href="www.diphone.olx.pl">SPRAWDŹ DOSTĘPNE TELEFONY!</a></h5>
+                       href="https://diphone.olx.pl/#items" target="_blank">SPRAWDŹ DOSTĘPNE TELEFONY!</a></h5>
         </div>
         <div class="col-sm-4">
             <div class="animate__animated animate__backInRight" style="animation-delay: 0.5s">
