hide statute in help menu

--- a/templates/pl_layout.html
+++ b/templates/pl_layout.html
@@ -130,7 +130,7 @@
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                         <a class="dropdown-item" href="/polityka_prywatnosci">POLITYKA PRYWATNOŚCI</a>
                         <a class="dropdown-item" href="/cookies">INFORMACJE O COOKIES</a>
-                        <a class="dropdown-item" href="/regulamin">REGULAMIN SERWISU</a>
+<!--                        <a class="dropdown-item" href="/regulamin">REGULAMIN SERWISU</a>-->
                         <a class="dropdown-item" href="/kontakt">KONTAKT</a>
                     </div>
                 </li>
