refill page with statute

--- a/templates/regulamin.html
+++ b/templates/regulamin.html
@@ -11,7 +11,7 @@
             </h4>
 
             <!-- POSTANOWIENIA OGÓLNE -->
-            <p class="p-politics-title"><strong>§1 POSTANOWIENIA OGÓLNE:</strong></p>
+            <!--            <p class="p-politics-title"><strong>§1 POSTANOWIENIA OGÓLNE:</strong></p>-->
             <p class="p-politics">
                 <img src="static/images/service/check.png" style="height: 20px"> Firma DiPHONE Dawid Orzepowski z
                 siedzibą przy ul. Hetmańskiej 59, kod pocztowy 05-120 Legionowa, posługująca się numerem NIP 5361852916
@@ -30,28 +30,24 @@
                 wykonania
                 Usługi akceptuje postanowienia niniejszego regulaminu i wyraża zgodę na przetwarzanie danych osobowych w
                 zakresie niezbędnym do realizacji Usługi.</p>
-
-            <!-- WYCENA USŁUGI -->
-            <p class="p-politics-title"><strong>§2 WYCENA USŁUGI:</strong></p>
             <p class="p-politics">
-                <img src="static/images/service/check.png" style="height: 20px"> Ceny za Usługi w zależności od
-                wybranego producenta, modelu i rodzaju usterki zostały określone zostały na stronie ww.diphone.pl.
-            </p>
+                <img src="static/images/service/check.png" style="height: 20px"> Firma DiPHONE nie ponosi
+                odpowiedzialności za dane i oprogramowanie zainstalowane w serwisowanym urządzeniu. Zleceniodawca, przed
+                powierzeniem sprzętu do serwisu zostaje każdorazowo poinformowany, że określone procedury napraw
+                wymagają przywrócenia ustawień fabrycznych urządzenia.</p>
             <p class="p-politics">
-                <img src="static/images/service/check.png" style="height: 20px"> W przypadku wskazania jednej określonej
-                ceny za naprawę zgodną z parametrami wskazanymi przez Zleceniodawcę, DiPHONE gwarantuje jej wykonanie w
-                tejże kwocie.</p>
+                <img src="static/images/service/check.png" style="height: 20px"> Firma DiPHONE informuje, iż naprawy
+                sprzętu zalanego cieczą, po upadkach i innych uszkodzeniach mechanicznych traktowane są jako naprawy
+                podwyższonego ryzyka. Firma DiPHONE nie udziela gwarancji na naprawę urządzeń tego typu. Zleceniodawca
+                każdorazowo informowany jest, iż podczas naprawy istnieje możliwość ujawnienia uszkodzeń,
+                niezdiagnozowanych podczas przyjęcia do serwisu. Przy zaistnieniu takiej sytuacji Firma DiPHONE
+                zastrzega sobie prawo do zwrotu urządzenia nienaprawionego lub z objawami uszkodzeń innymi niż te,
+                występujące podczas przyjęcia do serwisu.</p>
             <p class="p-politics">
-                <img src="static/images/service/check.png" style="height: 20px"> W przypadku wskazania zakresu cenowego
-                „od – do” za naprawę zgodną z parametrami wskazanymi przez Zleceniodawcę, DiPHONE gwarantuje, że cena
-                maksymalna za naprawę nie zostanie przekroczona, a ostateczna cena może być od niej niższa w zależności
-                od tego, czy dane uszkodzenie było spowodowane jednym lub więcej czynnikami, co może zostać określone
-                dopiero po analizie podzespołów elektronicznych na miejscu w serwisie DiPHONE. W przypadku gdy cena
-                naprawy, określona po weryfikacji na miejscu w serwisie, jest wyższa niż wskazana kwota minimalna
-                wskazana na stronie www.diphone.pl, obsługa klienta DiPHONE skontaktuje się ze Zleceniodawcą, aby
-                uzyskać jego akceptację co do kwoty naprawy.</p>
-
-
+                <img src="static/images/service/check.png" style="height: 20px"> Jeżeli podczas naprawy urządzenia,
+                serwisant zdiagnozuje uszkodzenie powstałe na skutek ingerencji osób do tego nieuprawnionych, Firma
+                DiPHONE zastrzega sobie prawo do zwiększenia kosztu naprawy o 20% bez konieczności konsultacji ze
+                Zleceniodawcą. W wyjątkowych sytuacjach Serwis zastrzega sobie prawo do odmowy naprawy.</p>
 
         </div>
     </div>
