--- a/templates/regulamin.html
+++ b/templates/regulamin.html
@@ -48,7 +48,54 @@
                 serwisant zdiagnozuje uszkodzenie powstałe na skutek ingerencji osób do tego nieuprawnionych, Firma
                 DiPHONE zastrzega sobie prawo do zwiększenia kosztu naprawy o 20% bez konieczności konsultacji ze
                 Zleceniodawcą. W wyjątkowych sytuacjach Serwis zastrzega sobie prawo do odmowy naprawy.</p>
-
+            <p class="p-politics">
+                <img src="static/images/service/check.png" style="height: 20px"> W przypadku pozostawenia sprzętu w
+                Serwisie i nieodebrania go w terminie 3 miesięcy od daty wyznaczonej naprawy, sprzęt uznaje się za
+                porzucony (w rozumieniu art. 180 K.C.) - poddany zostaje wówczas utylizacji.</p>
+            <p class="p-politics">
+                <img src="static/images/service/check.png" style="height: 20px"> W wyjątkowej sytuacji Firma DiPHONE
+                zastrzega sobie prawo do wydłużenia naprawy sprzętu o czas niezbędny do sprowadzenia potrzebnych części.
+                Ponadto Zleceniodawcanie może domagać się zwrotu utraconych zysków w przypadku wydłużenia czasu naprawy.
+            </p>
+            <p class="p-politics">
+                <img src="static/images/service/check.png" style="height: 20px"> Wszystkie naprawy oraz sprzedawane
+                części są objęte 3 miesięcznym okresem gwarancyjnym, chyba, że na dowodzie sprzedaży jest inaczej.
+                Warukiem uznania gwarancji jest nienaruszona plomba gwarancyjna Firmy DiPHONE, a w przypadku zakupu
+                części bez usługi montażu - również dokument potwierdzający jej montaż przez licencjonowany serwis.
+                Gwarancja nie obejmuje uszkodzeń powstałych na skutek uszkodzeń mechanicznych, a także na skutek
+                nieprofesjonalnego montażu.
+            </p>
+            <p class="p-politics">
+                <img src="static/images/service/check.png" style="height: 20px"> Podczas odebrania sprzętu z serwisu,
+                Zleceniodawca zobligowany jest do dokładnego sprawdzenia sprzętu i zgłoszenia ewentualnych uwag
+                dotyczących wykonanej naprawy, czy zastrzeżeń do stanu fizycznego urządzenia.
+            </p>
+            <p class="p-politics">
+                <img src="static/images/service/check.png" style="height: 20px"> Firma DiPHONE nie ponosi
+                odpowiedzialności za pozostawione w serwisie akcesoria, pudełka, karty pamięci czy karty SIM z
+                wyłączeniem przypadków, gdy pozostawiane są one na prośbę Serwisu, celem diagnostyki usterki.
+            </p>
+            <p class="p-politics">
+                <img src="static/images/service/check.png" style="height: 20px"> Firma DiPHONE nie posiada autoryzacji
+                żadnego z producentów sprzętu oraz nie dokonuje napraw gwarancyjnych.
+            </p>
+            <p class="p-politics">
+                <img src="static/images/service/check.png" style="height: 20px"> Zleceniodawca oświadcza, że wyraża
+                zgodę na przetwarzanie swoich danych osobowych przez Firmę DiPHONE celem realizacji zlecenia, zgodnie z
+                ustawą z dnia 29 sierpnia 1997 roku, o ochronie danych osobowych (Dz.U. z 2002r, nr 101, poz.926).
+            </p>
+            <p class="p-politics">
+                <img src="static/images/service/check.png" style="height: 20px"> Firma DiPHONE zastrzega, że ma prawo do
+                odstąpienia od umowy - zgodnie z obowiązującym prawem w Polsce.
+            </p>
+            <p class="p-politics">
+                <img src="static/images/service/check.png" style="height: 20px"> Zleceniodawca, który decyduje się na
+                naprawę w Firmie DiPHONE jest wcześniej informowany - PRZED WYKONANIEM NAPRAWY -, iż po jej wykonaniu
+                traci on prawo do odstąpienia od umowy.
+            </p>
+            <p class="p-politics">
+                <img src="static/images/service/check.png" style="height: 20px">
+            </p>
         </div>
     </div>
 </div>
