--- a/templates/regulamin.html
+++ b/templates/regulamin.html
@@ -10,92 +10,21 @@
                     class="h5-titles-shadow">DiPHONE Dawid Orzepowski</span>
             </h4>
 
-            <!-- POSTANOWIENIA OGÓLNE -->
-            <!--            <p class="p-politics-title"><strong>§1 POSTANOWIENIA OGÓLNE:</strong></p>-->
+            <!--             POSTANOWIENIA OGÓLNE -->
+            <p class="p-politics-title"><strong>§1 POSTANOWIENIA OGÓLNE:</strong></p>
             <p class="p-politics">
-                <img src="static/images/service/check.png" style="height: 20px"> Firma DiPHONE Dawid Orzepowski z
-                siedzibą przy ul. Hetmańskiej 59, kod pocztowy 05-120 Legionowa, posługująca się numerem NIP 5361852916
-                oraz REGON 380576174, zwana dalej <strong>DiPHONE</strong> świadczy usługi naprawy urządzeń typu
-                smartphone, tablet i laptop producentów, których pełna i aktualna lista znajduje się na stronie
-                internetowej www.diphone.pl, zwane dalej „Usługami”.</p>
-            <p class="p-politics">
-                <img src="static/images/service/check.png" style="height: 20px"> Zleceniodawcami DiPHONE mogą być
-                zarówno Przedsiębiorcy jak i Konsumenci, tj. osoby fizyczne, które dokonują czynności prawnej,
-                niezwiązanej bezpośrednio z jej działalnością gospodarczą lub zawodową. Przedsiębiorcą w rozumieniu
-                niniejszego regulaminu jest osoba fizyczna, osoba prawna lub jednostka organizacyjna nie będąca osobą
-                prawną, której ustawa przyznaje zdolność prawną, prowadząca we własnym imieniu działalność gospodarczą
-                lub zawodową.</p>
-            <p class="p-politics">
-                <img src="static/images/service/check.png" style="height: 20px"> Zleceniodawca poprzez zlecenie
-                wykonania
-                Usługi akceptuje postanowienia niniejszego regulaminu i wyraża zgodę na przetwarzanie danych osobowych w
-                zakresie niezbędnym do realizacji Usługi.</p>
-            <p class="p-politics">
-                <img src="static/images/service/check.png" style="height: 20px"> Firma DiPHONE nie ponosi
-                odpowiedzialności za dane i oprogramowanie zainstalowane w serwisowanym urządzeniu. Zleceniodawca, przed
-                powierzeniem sprzętu do serwisu zostaje każdorazowo poinformowany, że określone procedury napraw
-                wymagają przywrócenia ustawień fabrycznych urządzenia.</p>
-            <p class="p-politics">
-                <img src="static/images/service/check.png" style="height: 20px"> Firma DiPHONE informuje, iż naprawy
-                sprzętu zalanego cieczą, po upadkach i innych uszkodzeniach mechanicznych traktowane są jako naprawy
-                podwyższonego ryzyka. Firma DiPHONE nie udziela gwarancji na naprawę urządzeń tego typu. Zleceniodawca
-                każdorazowo informowany jest, iż podczas naprawy istnieje możliwość ujawnienia uszkodzeń,
-                niezdiagnozowanych podczas przyjęcia do serwisu. Przy zaistnieniu takiej sytuacji Firma DiPHONE
-                zastrzega sobie prawo do zwrotu urządzenia nienaprawionego lub z objawami uszkodzeń innymi niż te,
-                występujące podczas przyjęcia do serwisu.</p>
-            <p class="p-politics">
-                <img src="static/images/service/check.png" style="height: 20px"> Jeżeli podczas naprawy urządzenia,
-                serwisant zdiagnozuje uszkodzenie powstałe na skutek ingerencji osób do tego nieuprawnionych, Firma
-                DiPHONE zastrzega sobie prawo do zwiększenia kosztu naprawy o 20% bez konieczności konsultacji ze
-                Zleceniodawcą. W wyjątkowych sytuacjach Serwis zastrzega sobie prawo do odmowy naprawy.</p>
-            <p class="p-politics">
-                <img src="static/images/service/check.png" style="height: 20px"> W przypadku pozostawenia sprzętu w
-                Serwisie i nieodebrania go w terminie 3 miesięcy od daty wyznaczonej naprawy, sprzęt uznaje się za
-                porzucony (w rozumieniu art. 180 K.C.) - poddany zostaje wówczas utylizacji.</p>
-            <p class="p-politics">
-                <img src="static/images/service/check.png" style="height: 20px"> W wyjątkowej sytuacji Firma DiPHONE
-                zastrzega sobie prawo do wydłużenia naprawy sprzętu o czas niezbędny do sprowadzenia potrzebnych części.
-                Ponadto Zleceniodawcanie może domagać się zwrotu utraconych zysków w przypadku wydłużenia czasu naprawy.
+                <img src="static/images/service/check.png" style="height: 20px"> 1. Niniejszy Regulamin określa zasady i
+                warunki świadczenia usług serwisowych sprzętu elektronicznego (w szczególności telefonów komórkowych,
+                smartfonów, komputerów, laptopów, tabletów) przez firmę <strong>DiPHONE Dawid Orzepowski</strong> z
+                siedzibą przy ul. Hetmańskiej 59, 05-120 Legionowo, zwaną dalej Serwisem.
             </p>
             <p class="p-politics">
-                <img src="static/images/service/check.png" style="height: 20px"> Wszystkie naprawy oraz sprzedawane
-                części są objęte 3 miesięcznym okresem gwarancyjnym, chyba, że na dowodzie sprzedaży jest inaczej.
-                Warukiem uznania gwarancji jest nienaruszona plomba gwarancyjna Firmy DiPHONE, a w przypadku zakupu
-                części bez usługi montażu - również dokument potwierdzający jej montaż przez licencjonowany serwis.
-                Gwarancja nie obejmuje uszkodzeń powstałych na skutek uszkodzeń mechanicznych, a także na skutek
-                nieprofesjonalnego montażu.
+                <img src="static/images/service/check.png" style="height: 20px"> 2. Miejscem przyjmowania i wydawania
+                sprzętu przez Serwis jest adres siedziby firmy, chyba że miejsce zostało ustalone i pisemnie
+                potwierdzone indywidualnie ze Zleceniodawcą.
             </p>
-            <p class="p-politics">
-                <img src="static/images/service/check.png" style="height: 20px"> Podczas odebrania sprzętu z serwisu,
-                Zleceniodawca zobligowany jest do dokładnego sprawdzenia sprzętu i zgłoszenia ewentualnych uwag
-                dotyczących wykonanej naprawy, czy zastrzeżeń do stanu fizycznego urządzenia.
-            </p>
-            <p class="p-politics">
-                <img src="static/images/service/check.png" style="height: 20px"> Firma DiPHONE nie ponosi
-                odpowiedzialności za pozostawione w serwisie akcesoria, pudełka, karty pamięci czy karty SIM z
-                wyłączeniem przypadków, gdy pozostawiane są one na prośbę Serwisu, celem diagnostyki usterki.
-            </p>
-            <p class="p-politics">
-                <img src="static/images/service/check.png" style="height: 20px"> Firma DiPHONE nie posiada autoryzacji
-                żadnego z producentów sprzętu oraz nie dokonuje napraw gwarancyjnych.
-            </p>
-            <p class="p-politics">
-                <img src="static/images/service/check.png" style="height: 20px"> Zleceniodawca oświadcza, że wyraża
-                zgodę na przetwarzanie swoich danych osobowych przez Firmę DiPHONE celem realizacji zlecenia, zgodnie z
-                ustawą z dnia 29 sierpnia 1997 roku, o ochronie danych osobowych (Dz.U. z 2002r, nr 101, poz.926).
-            </p>
-            <p class="p-politics">
-                <img src="static/images/service/check.png" style="height: 20px"> Firma DiPHONE zastrzega, że ma prawo do
-                odstąpienia od umowy - zgodnie z obowiązującym prawem w Polsce.
-            </p>
-            <p class="p-politics">
-                <img src="static/images/service/check.png" style="height: 20px"> Zleceniodawca, który decyduje się na
-                naprawę w Firmie DiPHONE jest wcześniej informowany - PRZED WYKONANIEM NAPRAWY -, iż po jej wykonaniu
-                traci on prawo do odstąpienia od umowy.
-            </p>
-            <p class="p-politics">
-                <img src="static/images/service/check.png" style="height: 20px">
-            </p>
+
+
         </div>
     </div>
 </div>
