--- a/templates/regulamin.html
+++ b/templates/regulamin.html
@@ -23,6 +23,119 @@
                 sprzętu przez Serwis jest adres siedziby firmy, chyba że miejsce zostało ustalone i pisemnie
                 potwierdzone indywidualnie ze Zleceniodawcą.
             </p>
+            <p class="p-politics">
+                <img src="static/images/service/check.png" style="height: 20px"> 3. Zleceniodawcą (Klientem) jest osoba
+                fizyczna lub prawna zgłaszająca sprzęt do wykonania usługi naprawy serwisowej.
+            </p>
+            <p class="p-politics">
+                4. Potwierdzeniem zawarcia umowy o świadczenie usług serwisowych jest podpisany przez Serwis i
+                Zleceniodawcę PROTOKÓŁ PRZYJĘCIA SPRZĘTU DO SERWISU, zwany dalej Protokołem.
+            </p>
+            <p class="p-politics">
+                <img src="static/images/service/check.png" style="height: 20px"> 5. Oddanie sprzętu do Serwisu oraz
+                złożenie podpisu na Protokole, jednoznacznie oznacza akceptację niniejszego Regulaminu, stanowiącego
+                zarazem umowę, na podstawie której odbywa się usługa naprawy. Wszelkie inne postanowienia muszą być
+                przedstawione w formie pisemnej i zaakceptowane przez obie strony.
+            </p>
+            <p class="p-politics">
+                <img src="static/images/service/check.png" style="height: 20px"> 6. Protokół jest jedynym dokumentem
+                pozwalającym na odbiór sprzętu z Serwisu i musi on zostać przedstawiony Serwisowi przy odbiorze. Serwis
+                ma prawo wydać sprzęt każdej osobie, która posłuży się oryginałem Protokołu. W przypadku zgubienia
+                Protokołu dopuszcza się wylegitymowanie odbiorcy w celu wydania sprzętu.
+            </p>
+            <p class="p-politics">
+                <img src="static/images/service/check.png" style="height: 20px"> 7. Wydanie sprzętu następuje po
+                zapłaceniu przez Zleceniodawcę wynagrodzenia za wykonane usługi oraz innych kwot należnych Serwisowi w
+                ustalonej wysokości.
+            </p>
+            <p class="p-politics">
+                <img src="static/images/service/check.png" style="height: 20px"> 8. Złożenie zlecenia usługi serwisowej
+                wymaga udostępnienia Serwisowi danych osobowych Zleceniodawcy zawartych w Protokole. Złożenie zlecenia
+                serwisowego oznacza, że Zleceniodawca wyraża zgodę na przetwarzanie przez Serwis podanych przez niego
+                danych osobowych w zakresie niezbędnym do wykonania usługi na zasadach określonych w niniejszym
+                Regulaminie zgodnie z przepisami Ustawy z dnia 29 sierpnia 1997 o ochronie danych osobowych (Dz.U. z
+                1997 r. Nr 133 poz. 883 ze zm.).
+            </p>
+            <p class="p-politics">
+                <img src="static/images/service/check.png" style="height: 20px"> 9. W przypadku żądania usunięcia danych
+                osobowych z bazy Serwisu, unieważniana jest Gwarancja ze względu na brak możliwości potwierdzenia
+                wykonania naprawy przez Zleceniobiorcę.
+            </p>
+            <p class="p-politics">
+                <img src="static/images/service/check.png" style="height: 20px"> 10. Dostarczając sprzęt do Serwisu,
+                Zleceniodawca jest zobowiązany zapewnić bezpieczne opakowanie transportowe. Za uszkodzenia powstałe na
+                skutek niewłaściwego zabezpieczenia sprzętu, Serwis nie odpowiada.
+            </p>
+            <p class="p-politics">
+                <img src="static/images/service/check.png" style="height: 20px"> 11. Serwis nie uczestniczy w kosztach
+                związanych z dostarczeniem sprzętu do Serwisu i z Serwisu, strat materialnych i niematerialnych
+                wynikających z przestoju pracy oraz nie ponosi odpowiedzialności za uszkodzenie lub utratę danych
+                podczas wykonywania czynności serwisowych oraz za uszkodzenia powstałe w trakcie transportu do i z
+                Serwisu.
+            </p>
+            <p class="p-politics">
+                <img src="static/images/service/check.png" style="height: 20px"> 12. Serwis nie odpowiada za dane
+                znajdujące się na dyskach twardych lub innych nośnikach znajdujących się w sprzęcie oraz dostarczonych z
+                nimi akcesoriach. Na życzenie Zleceniodawcy Serwis odpłatnie może wykonać archiwizację wskazanych
+                danych.
+            </p>
+            <p class="p-politics">
+                <img src="static/images/service/check.png" style="height: 20px"> 13. Za akcesoria pozostawione w
+                sprzęcie, a nie wpisane przez Zleceniodawcę w Protokole, Serwis nie odpowiada.
+            </p>
+            <p class="p-politics">
+                <img src="static/images/service/check.png" style="height: 20px"> 14. Po upływie 7 dni roboczych od
+                momentu zawiadomienia Zleceniodawcy o zakończeniu naprawy, w przypadku nieodebrania sprzętu, będzie
+                naliczona opłata w kwocie 25 zł brutto tygodniowo za składowanie (magazynowanie) sprzętu. Brak
+                możliwości zawiadomienia Klienta w sposób przez niego wskazany, a nie wynikający z błędu Serwisu, nie
+                zwalnia Zleceniodawcy z opłaty magazynowej przed wydaniem sprzętu.
+            </p>
+            <p class="p-politics">
+                <img src="static/images/service/check.png" style="height: 20px"> 15. Po upływie 30 dni, nieodebrany
+                sprzęt ulega przepadkowi i jest uznawany jako porzucony przez właściciela (Zleceniodawcę) w rozumieniu
+                art. 180 Kodeksu Cywilnego, oraz na podstawie art. 181 K. C., Serwis nabywa przez jego objęcie w
+                posiadanie samoistne.
+            </p>
+            <p class="p-politics">
+                <img src="static/images/service/check.png" style="height: 20px"> 16. Serwis nie odpowiada za usterki
+                zatajone lub niewymienione przez Zleceniodawcę podczas procesu przyjęcia sprzętu.
+            </p>
+            <p class="p-politics">
+                <img src="static/images/service/check.png" style="height: 20px"> 17. Gwarancja obejmuje wyłącznie zakres
+                dokonywanych napraw. Na wykonane usługi Serwis udziela 1 miesiąc Gwarancji z wyjątkiem sprzętu, który
+                uległ zalaniu. Wymienione w sprzęcie elementy mogą być objęte indywidualną gwarancją ich producenta
+                (sprzedawcy). Gwarancja nie obejmuje zwykłych czynności regulacyjnych, konfiguracyjnych, zwykłego
+                zużycia materiałów eksploatacyjnych, oprogramowania oraz systemów operacyjnych.
+            </p>
+            <p class="p-politics">
+                <img src="static/images/service/check.png" style="height: 20px"> 18. Serwis dołoży wszelkich starań, aby
+                wady ujawnione w okresie Gwarancji zostały usunięte w terminie 14 dni roboczych od daty uznania
+                zasadności reklamacji.
+            </p>
+            <p class="p-politics">
+                <img src="static/images/service/check.png" style="height: 20px"> 19. Trwale uszkodzony sprzęt poddawany
+                jest utylizacji, o ile Zleceniodawca nie zastrzeże inaczej w Protokole.
+            </p>
+            <p class="p-politics">
+                <img src="static/images/service/check.png" style="height: 20px"> 20. Wadliwie działający sprzęt w wyniku
+                instalacji własnej oprogramowania dokonanej przez Zleceniodawcę, nie podlega reklamacji na wykonane
+                usługi.
+            </p>
+            <p class="p-politics">
+                <img src="static/images/service/check.png" style="height: 20px"> 21. Podany czas naprawy jest terminem
+                orientacyjnym i może ulec niezapowiedzianej zmianie, niezależnej od Serwisu.
+            </p>
+            <p class="p-politics">
+                <img src="static/images/service/check.png" style="height: 20px"> 22. Serwis zastrzega sobie prawo
+                wysłania sprzętu lub jego elementów do serwisów zewnętrznych. W takim przypadku okres naprawy może
+                zostać wydłużony do 30 dni roboczych.
+            </p>
+            <p class="p-politics">
+                <img src="static/images/service/check.png" style="height: 20px"> 23. Wszelkie niezgodności usługi
+                serwisowej z umową muszą być zgłoszone niezwłocznie po wykryciu, nie później niż w ciągu 7 dni od daty
+                stwierdzenia niezgodności. Uszkodzenia mechaniczne, muszą być zgłoszone niezwłocznie przy odbiorze
+                sprzętu z Serwisu.
+            </p>
 
 
         </div>
